--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,3 @@
-
 # H2 connection
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -8,6 +7,6 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Show SQL on console
+# Show sql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
